# fast-fec-rust

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
src/: errors.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs  usage.rs
src/csv_helper/: mod.rs
src/encoding/: encoding_test.rs  mod.rs
src/fec/: context.rs  mod.rs  parser.rs
src/writer/: mod.rs
tests/: cli_tests.rs  writer_tests.rs
