[package]
name = "fast-fec-rust"
version = "0.1.0"
edition = "2021"
description = "Rust port of https://github.com/washingtonpost/FastFEC"
repository = "https://github.com/CastroForGeorgia/fast-fec-rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
