[package]
name = "fast-fec-rust"
version = "0.1.0"
edition = "2021"
description = "Rust port of https://github.com/washingtonpost/FastFEC"
repository = "https://github.com/CastroForGeorgia/fast-fec-rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5"          # For parsing CLI arguments
atty = "0.2"          # For checking if stdin is piped
anyhow = "1.0"        # For error handling with context
thiserror = "2"       # For defining custom error types
regex = "1.11.1"      # For regex-based parsing (replacing PCRE in C)
csv = "1.3.1"